<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_reu"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
...
                    android:background="#164FF6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectDate" />

                <Button
                    android:id="@+id/datePickerButton"
                    style="?android:spinnerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="01/07/21"
                    android:textSize="20dp"
...
                    android:background="#164FF6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectTime" />

                <Button
                    android:id="@+id/timePickerButton"
                    style="?android:spinnerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="18h30"
                    android:textSize="20sp"
...
                    android:background="#164FF6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectRoom" />

                <Spinner
                    android:id="@+id/roomSpinner"
                    style="?android:spinnerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    android:background="#164FF6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectParticipants" />

                <TextView
                    android:id="@+id/participantSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="32dp"
                    android:background="@android:drawable/editbox_background"
                    android:hint="Liste des participants"
...
                    android:background="#164FF6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/selectColor" />

                <Spinner
                    android:id="@+id/colorSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@android:drawable/editbox_background"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:hint="Sélectionnez une couleur"
...
                        android:ems="10"
                        android:gravity="center"
                        android:hint="Sujet de la réunion"
                        android:inputType="text"
                        android:lines="1"
                        android:textColor="#000000"
                        android:id="@+id/subject_typing"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/selectSubject" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/bleuuu"
            android:enabled="false"
...
