<resources>
    <string name="app_name">Mareu</string>

    <string name="list_of_participants">liste des participants</string>
    <string name="ok">ok</string>
    <string name="clear">Effacer</string>
    <string name="delete">Annuler</string>
    <string name="filter">filtrer</string>
    <string name="filer_by_room">Filtrer par salle</string>
    <string name="filter_by_date">Filtrer par date</string>
    <string name="reset">Reset</string>
    <string name="description">%1$s - %2$s - %3$s</string>
    <string name="room1">Salle 1</string>
    <string name="room2">Salle 2</string>
    <string name="room3">Salle 3</string>
    <string name="room4">Salle 4</string>
    <string name="room5">Salle 5</string>
    <string name="room6">Salle 6</string>
    <string name="room7">Salle 7</string>
    <string name="room8">Salle 8</string>
    <string name="room9">Salle 9</string>
    <string name="room10">Salle 10</string>
    <string name="filtre">      </string>

    <string-array name="room_array">
        <item>@string/room1</item>
        <item>@string/room2</item>
        <item>@string/room3</item>
        <item>@string/room4</item>
        <item>@string/room5</item>
        <item>@string/room6</item>
        <item>@string/room7</item>
        <item>@string/room8</item>
        <item>@string/room9</item>
        <item>@string/room10</item>
    </string-array>

    <string-array name="Participants">
        <item>Shin@gmail.com</item>
        <item>Gatsu@gmail.com</item>
        <item>Luffy@gmail.com</item>
        <item>Emma@gmail.com</item>
        <item>Jinwoo@gmail.com</item>
        <item>Saïtama@gmail.com</item>
    </string-array>

    <integer-array name="color">
        <item>@drawable/ic_circle_blue</item>
        <item>@drawable/ic_circle_green</item>
        <item>@drawable/ic_circle_pink</item>
        <item>@drawable/ic_circle_yellow</item>
        <item>@drawable/ic_circle</item>
    </integer-array>

</resources>

