<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/filter_button"
        android:icon="@drawable/ic_filter"
        android:title="@string/filer_by_room"
        app:showAsAction="ifRoom">

        <menu>

...
